Add SHARELATEX_PORT option, default to 80
This allows a user to configure the host port that the sharelatex
container will bind to. Previously this was hard-coded to port 80, which
can cause problems on systems with something already bound to that port.

--- a/lib/config-seed/overleaf.rc
+++ b/lib/config-seed/overleaf.rc
@@ -5,6 +5,7 @@ PROJECT_NAME=overleaf
 # Sharelatex container
 SHARELATEX_DATA_PATH=data/sharelatex
 SERVER_PRO=false
+SHARELATEX_PORT=80
 
 # Sibling Containers
 SIBLING_CONTAINERS_ENABLED=false
