--- a/lib/docker-compose.base.yml
+++ b/lib/docker-compose.base.yml
@@ -9,7 +9,7 @@ services:
         volumes:
             - "${SHARELATEX_DATA_PATH}:/var/lib/sharelatex"
         ports:
-            - 80:80
+            - "${SHARELATEX_PORT:-80}:80"
         environment:
           SHARELATEX_MONGO_URL: "${MONGO_URL}"
           SHARELATEX_REDIS_HOST: "${REDIS_HOST}"
