Fixed footer links and updated app title (#40)
* Fixed footer links and updated app title
* Updated default app name, nav title and domain
* replaced mydomain.com occurrences with example.com

--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -1,4 +1,4 @@
-SHARELATEX_APP_NAME=Overleaf Community Edition XYZ
+SHARELATEX_APP_NAME=Our Overleaf Instance
 
 ENABLED_LINKED_FILE_TYPES=url,project_file
 
@@ -15,20 +15,20 @@ TEXMFVAR=/var/lib/sharelatex/tmp/texmf-var
 ## Set for SSL via nginx-proxy
 #VIRTUAL_HOST=103.112.212.22
 
-# SHARELATEX_SITE_URL=http://sharelatex.mydomain.com
-# SHARELATEX_NAV_TITLE=Our ShareLaTeX Instance
+# SHARELATEX_SITE_URL=http://overleaf.example.com
+# SHARELATEX_NAV_TITLE=Our Overleaf Instance
 # SHARELATEX_HEADER_IMAGE_URL=http://somewhere.com/mylogo.png
-# SHARELATEX_ADMIN_EMAIL=support@it.com
+# SHARELATEX_ADMIN_EMAIL=support@example.com
 
-# SHARELATEX_LEFT_FOOTER=[{"text"="Powered by <a href=\"https://www.sharelatex.com\">ShareLaTeX</a> 2016"},{"text"="Another page I want to link to can be found <a href=\"here\">here</a>"} ]
-# SHARELATEX_RIGHT_FOOTER=[{"text"="Hello I am on the Right"} ]
+# SHARELATEX_LEFT_FOOTER=[{"text":"Powered by Overleaf © 2021", "url": "https://www.overleaf.com"}, {"text": "Contact your support team", "url": "mailto:support@example.com"} ]
+# SHARELATEX_RIGHT_FOOTER=[{"text":"Hello I am on the Right"}]
 
-# SHARELATEX_EMAIL_FROM_ADDRESS=team@sharelatex.com
+# SHARELATEX_EMAIL_FROM_ADDRESS=team@example.com
 
 # SHARELATEX_EMAIL_AWS_SES_ACCESS_KEY_ID=
 # SHARELATEX_EMAIL_AWS_SES_SECRET_KEY=
 
-# SHARELATEX_EMAIL_SMTP_HOST=smtp.mydomain.com
+# SHARELATEX_EMAIL_SMTP_HOST=smtp.example.com
 # SHARELATEX_EMAIL_SMTP_PORT=587
 # SHARELATEX_EMAIL_SMTP_SECURE=false
 # SHARELATEX_EMAIL_SMTP_USER=
@@ -53,7 +53,7 @@ TEXMFVAR=/var/lib/sharelatex/tmp/texmf-var
 # SHARELATEX_LDAP_UPDATE_USER_DETAILS_ON_LOGIN=true
 
 # SHARELATEX_TEMPLATES_USER_ID=578773160210479700917ee5
-# SHARELATEX_NEW_PROJECT_TEMPLATE_LINKS=[ {"name":"All Templates","url":"/templates/all"}]
+# SHARELATEX_NEW_PROJECT_TEMPLATE_LINKS=[{"name":"All Templates","url":"/templates/all"}]
 
 
 # SHARELATEX_PROXY_LEARN="true"
