Add example vars for smtp name and logger (#43)
Co-authored-by: Shane Kilkelly <shane.kilkelly@overleaf.com>

--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -33,6 +33,8 @@ TEXMFVAR=/var/lib/sharelatex/tmp/texmf-var
 # SHARELATEX_EMAIL_SMTP_SECURE=false
 # SHARELATEX_EMAIL_SMTP_USER=
 # SHARELATEX_EMAIL_SMTP_PASS=
+# SHARELATEX_EMAIL_SMTP_NAME=
+# SHARELATEX_EMAIL_SMTP_LOGGER=false
 # SHARELATEX_EMAIL_SMTP_TLS_REJECT_UNAUTH=true
 # SHARELATEX_EMAIL_SMTP_IGNORE_TLS=false
 # SHARELATEX_CUSTOM_EMAIL_FOOTER=This system is run by department x
