Add example of nginx config variables (#46)
Co-authored-by: Shane Kilkelly <shane.kilkelly@overleaf.com>

--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -12,6 +12,10 @@ EMAIL_CONFIRMATION_DISABLED=true
 # see https://github.com/overleaf/overleaf/issues/695
 TEXMFVAR=/var/lib/sharelatex/tmp/texmf-var
 
+## Nginx
+# NGINX_WORKER_PROCESSES=4
+# NGINX_WORKER_CONNECTIONS=768
+
 ## Set for SSL via nginx-proxy
 #VIRTUAL_HOST=103.112.212.22
 
