Add a TLS proxy option to the Toolkit

--- a/lib/config-seed/overleaf.rc
+++ b/lib/config-seed/overleaf.rc
@@ -18,3 +18,7 @@ MONGO_DATA_PATH=data/mongo
 # Redis configuration
 REDIS_ENABLED=true
 REDIS_DATA_PATH=data/redis
+
+# TLS Proxy
+NGINX_ENABLED=false
+OL_DOMAINS=localhost,*.localhost,overleaf-toolkit.com,*.overleaf-toolkit.com
