Allow the port used for TLS to be changed

--- a/lib/config-seed/overleaf.rc
+++ b/lib/config-seed/overleaf.rc
@@ -24,3 +24,4 @@ NGINX_ENABLED=false
 NGINX_CONFIG_PATH=config/nginx/nginx.conf
 NGINX_PRIVATE_KEY_PATH=config/nginx/certs/overleaf_key.pem
 NGINX_CERTIFICATE_PATH=config/nginx/certs/overleaf_certificate.pem
+TLS_PORT=443
