Rename TLS cert/key variables

--- a/lib/docker-compose.nginx.yml
+++ b/lib/docker-compose.nginx.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "127.0.0.1:${TLS_PORT:-443}:18443"
     volumes:
-      - "${NGINX_PRIVATE_KEY_PATH}:/certs/nginx_key.pem"
-      - "${NGINX_CERTIFICATE_PATH}:/certs/nginx_certificate.pem"
+      - "${TLS_PRIVATE_KEY_PATH}:/certs/nginx_key.pem"
+      - "${TLS_CERTIFICATE_PATH}:/certs/nginx_certificate.pem"
       - "${NGINX_CONFIG_PATH}:/etc/nginx/nginx.conf"
     restart: on-failure:5
     container_name: nginx
