Always restart nginx on failure

--- a/lib/docker-compose.nginx.yml
+++ b/lib/docker-compose.nginx.yml
@@ -10,7 +10,7 @@ services:
       - "${TLS_PRIVATE_KEY_PATH}:/certs/nginx_key.pem"
       - "${TLS_CERTIFICATE_PATH}:/certs/nginx_certificate.pem"
       - "${NGINX_CONFIG_PATH}:/etc/nginx/nginx.conf"
-    restart: on-failure:5
+    restart: always
     container_name: nginx
     depends_on:
       - sharelatex
