--- a/lib/config-seed/nginx.conf
+++ b/lib/config-seed/nginx.conf
@@ -1,35 +1,6 @@
-user  nginx;
-worker_processes  1;
-
-error_log  /dev/stderr notice;
-
-events {
-    worker_connections  1024;
-    use epoll;
-}
+events {}
 
 http {
-    resolver 127.0.0.11 ipv6=off valid=30s;
-
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /dev/stdout  main;
-
-    sendfile        on;
-    tcp_nopush      on;
-    tcp_nodelay     on;
-
-    keepalive_timeout  65;
-
-    gzip  on;
-
-
-
     server {
         listen 443 ssl;
         server_name    _; # Catch all, see http://nginx.org/en/docs/http/server_names.html
