Variables for running Overleaf behind a proxy

--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -16,8 +16,10 @@ TEXMFVAR=/var/lib/sharelatex/tmp/texmf-var
 # NGINX_WORKER_PROCESSES=4
 # NGINX_WORKER_CONNECTIONS=768
 
-## Set for SSL via nginx-proxy
-#VIRTUAL_HOST=103.112.212.22
+## Set for TLS via nginx-proxy
+# SHARELATEX_BEHIND_PROXY=true
+# SHARELATEX_SECURE_COOKIE=true
+# VIRTUAL_HOST=103.112.212.22
 
 # SHARELATEX_SITE_URL=http://overleaf.example.com
 # SHARELATEX_NAV_TITLE=Our Overleaf Instance
