Added `TEX_LIVE_` to variables.env (#58)
* Added `TEX_LIVE_` to variables.env

--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -61,5 +61,7 @@ TEXMFVAR=/var/lib/sharelatex/tmp/texmf-var
 # SHARELATEX_TEMPLATES_USER_ID=578773160210479700917ee5
 # SHARELATEX_NEW_PROJECT_TEMPLATE_LINKS=[{"name":"All Templates","url":"/templates/all"}]
 
+TEX_LIVE_DOCKER_IMAGE="quay.io/sharelatex/texlive-full:2020.1"
+ALL_TEX_LIVE_DOCKER_IMAGES="quay.io/sharelatex/texlive-full:2020.1,quay.io/sharelatex/texlive-full:2019.1"
 
 # SHARELATEX_PROXY_LEARN="true"
