--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -1,6 +1,6 @@
 SHARELATEX_APP_NAME=Our Overleaf Instance
 
-ENABLED_LINKED_FILE_TYPES=url,project_file
+ENABLED_LINKED_FILE_TYPES=project_file,project_output_file
 
 # Enables Thumbnail generation using ImageMagick
 ENABLE_CONVERSIONS=true
