wip: Add new EXTERNAL_AUTH variable

--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -48,6 +48,7 @@ TEXMFVAR=/var/lib/sharelatex/tmp/texmf-var
 ## Server Pro ##
 ################
 
+EXTERNAL_AUTH=none
 # SHARELATEX_LDAP_URL=ldap://ldap:389
 # SHARELATEX_LDAP_SEARCH_BASE=ou=people,dc=planetexpress,dc=com
 # SHARELATEX_LDAP_SEARCH_FILTER=(uid={{username}})
