Configure nginx to redirect HTTP to HTTPS

--- a/lib/config-seed/nginx.conf
+++ b/lib/config-seed/nginx.conf
@@ -1,6 +1,14 @@
 events {}
 
 http {
+
+    server {
+        listen 80 default_server;
+        server_name _;
+        return 301 https://$host$request_uri;
+    }
+
+
     server {
         listen 443 ssl;
 
