--- a/lib/config-seed/nginx.conf
+++ b/lib/config-seed/nginx.conf
@@ -30,7 +30,7 @@ http {
         client_max_body_size 50M;
 
         location / {
-            proxy_pass http://sharelatex:80; # The port must match the value of SHARELATEX_PORT.
+            proxy_pass http://sharelatex:80;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
