[config-seed] variables: hide texlive image list by default

--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -62,7 +62,7 @@ EXTERNAL_AUTH=none
 # SHARELATEX_TEMPLATES_USER_ID=578773160210479700917ee5
 # SHARELATEX_NEW_PROJECT_TEMPLATE_LINKS=[{"name":"All Templates","url":"/templates/all"}]
 
-TEX_LIVE_DOCKER_IMAGE=quay.io/sharelatex/texlive-full:2020.1
-ALL_TEX_LIVE_DOCKER_IMAGES=quay.io/sharelatex/texlive-full:2020.1,quay.io/sharelatex/texlive-full:2019.1
+# TEX_LIVE_DOCKER_IMAGE=quay.io/sharelatex/texlive-full:2020.1
+# ALL_TEX_LIVE_DOCKER_IMAGES=quay.io/sharelatex/texlive-full:2020.1,quay.io/sharelatex/texlive-full:2019.1
 
 # SHARELATEX_PROXY_LEARN=true
