[config-seed] add variables for S3

--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -66,3 +66,64 @@ EXTERNAL_AUTH=none
 # ALL_TEX_LIVE_DOCKER_IMAGES=quay.io/sharelatex/texlive-full:2022.1,quay.io/sharelatex/texlive-full:2021.1,quay.io/sharelatex/texlive-full:2020.1
 
 # SHARELATEX_PROXY_LEARN=true
+
+# S3
+# Docs: https://github.com/overleaf/overleaf/wiki/S3
+# ## Enable the s3 backend for filestore
+# SHARELATEX_FILESTORE_BACKEND=s3
+# ## Enable S3 backend for history
+# SHARELATEX_HISTORY_BACKEND=s3
+# #
+# # Pick one of the two sections "AWS S3" or "Self-hosted S3".
+# #
+# # AWS S3
+# ## Bucket name for project files
+# SHARELATEX_FILESTORE_USER_FILES_BUCKET_NAME=overleaf-user-files
+# ## Bucket name for template files
+# SHARELATEX_FILESTORE_TEMPLATE_FILES_BUCKET_NAME=overleaf-template-files
+# ## Key for filestore user
+# SHARELATEX_FILESTORE_S3_ACCESS_KEY_ID=...
+# ## Secret for filestore user
+# SHARELATEX_FILESTORE_S3_SECRET_ACCESS_KEY=...
+# ## Bucket region you picked when creating the buckets.
+# SHARELATEX_FILESTORE_S3_REGION=""
+# ## Bucket name for project history blobs
+# SHARELATEX_HISTORY_PROJECT_BLOBS_BUCKET=overleaf-project-blobs
+# ## Bucket name for history chunks
+# SHARELATEX_HISTORY_CHUNKS_BUCKET=overleaf-chunks
+# ## Key for history user
+# SHARELATEX_HISTORY_S3_ACCESS_KEY_ID=...
+# ## Secret for history user
+# SHARELATEX_HISTORY_S3_SECRET_ACCESS_KEY=...
+# ## Bucket region you picked when creating the buckets.
+# SHARELATEX_HISTORY_S3_REGION=""
+#
+# # Self-hosted S3
+# ## Bucket name for project files
+# SHARELATEX_FILESTORE_USER_FILES_BUCKET_NAME=overleaf-user-files
+# ## Bucket name for template files
+# SHARELATEX_FILESTORE_TEMPLATE_FILES_BUCKET_NAME=overleaf-template-files
+# ## Key for filestore user
+# SHARELATEX_FILESTORE_S3_ACCESS_KEY_ID=...
+# ## Secret for filestore user
+# SHARELATEX_FILESTORE_S3_SECRET_ACCESS_KEY=...
+# ## S3 provider endpoint
+# SHARELATEX_FILESTORE_S3_ENDPOINT=http://10.10.10.10:9000
+# ## Path style addressing of buckets. Most likely you need to set this to "true".
+# SHARELATEX_FILESTORE_S3_PATH_STYLE="true"
+# ## Bucket region. Most likely you do not need to configure this.
+# SHARELATEX_FILESTORE_S3_REGION=""
+# ## Bucket name for project history blobs
+# SHARELATEX_HISTORY_PROJECT_BLOBS_BUCKET=overleaf-project-blobs
+# ## Bucket name for history chunks
+# SHARELATEX_HISTORY_CHUNKS_BUCKET=overleaf-chunks
+# ## Key for history user
+# SHARELATEX_HISTORY_S3_ACCESS_KEY_ID=...
+# ## Secret for history user
+# SHARELATEX_HISTORY_S3_SECRET_ACCESS_KEY=...
+# ## S3 provider endpoint
+# SHARELATEX_HISTORY_S3_ENDPOINT=http://10.10.10.10:9000
+# ## Path style addressing of buckets. Most likely you need to set this to "true".
+# SHARELATEX_HISTORY_S3_PATH_STYLE="true"
+# ## Bucket region. Most likely you do not need to configure this.
+# SHARELATEX_HISTORY_S3_REGION=""
