--- a/lib/config-seed/overleaf.rc
+++ b/lib/config-seed/overleaf.rc
@@ -3,6 +3,8 @@
 PROJECT_NAME=overleaf
 
 # Sharelatex container
+# Uncomment the SHARELATEX_IMAGE_NAME variable to use a user-defined image.
+# SHARELATEX_IMAGE_NAME=sharelatex/sharelatex
 SHARELATEX_DATA_PATH=data/sharelatex
 SERVER_PRO=false
 SHARELATEX_LISTEN_IP=127.0.0.1
