Support git bridge in Server Pro
This adds a new docker compose configuration for git bridge. This
configuration is loaded only when GIT_BRIDGE_ENABLED is set to true in
config/overleaf.rc

Co-authored-by: Thomas Mees <thomas.mees@overleaf.com>

--- a/lib/config-seed/overleaf.rc
+++ b/lib/config-seed/overleaf.rc
@@ -23,13 +23,20 @@ MONGO_IMAGE=mongo:4.4
 REDIS_ENABLED=true
 REDIS_DATA_PATH=data/redis
 
+# Git-bridge configuration (Server Pro only)
+#
+# If you enable git bridge, you must also set GIT_BRIDGE_OAUTH2_CLIENT_SECRET
+# in variables.env
+GIT_BRIDGE_ENABLED=true
+GIT_BRIDGE_DATA_PATH=data/git-bridge
+
 # TLS proxy configuration (optional)
 # See documentation in doc/tls-proxy.md
 NGINX_ENABLED=false
 NGINX_CONFIG_PATH=config/nginx/nginx.conf
 NGINX_HTTP_PORT=80
 # Replace these IP addresses with the external IP address of your host
-NGINX_HTTP_LISTEN_IP=127.0.1.1 
+NGINX_HTTP_LISTEN_IP=127.0.1.1
 NGINX_TLS_LISTEN_IP=127.0.1.1
 TLS_PRIVATE_KEY_PATH=config/nginx/certs/overleaf_key.pem
 TLS_CERTIFICATE_PATH=config/nginx/certs/overleaf_certificate.pem
