--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -1,4 +1,4 @@
-SHARELATEX_APP_NAME=Our Overleaf Instance
+SHARELATEX_APP_NAME="Our Overleaf Instance"
 
 ENABLED_LINKED_FILE_TYPES=project_file,project_output_file
 
