Add support for git bridge proxy
Instead of being available at http://localhost:8000/, the git bridge
will be available at http://localhost/git/

--- a/lib/docker-compose.git-bridge.yml
+++ b/lib/docker-compose.git-bridge.yml
@@ -8,8 +8,8 @@ services:
         volumes:
             - "${GIT_BRIDGE_DATA_PATH}:/tmp/wlgb"
         container_name: git-bridge
-        ports:
-            - "8000:8000"
+        expose:
+            - "8000"
         environment:
           GIT_BRIDGE_API_BASE_URL: "http://sharelatex/api/v0"
           GIT_BRIDGE_OAUTH2_SERVER: "http://sharelatex"
