--- a/lib/docker-compose.base.yml
+++ b/lib/docker-compose.base.yml
@@ -12,6 +12,8 @@ services:
             - "${SHARELATEX_LISTEN_IP:-127.0.0.1}:${SHARELATEX_PORT:-80}:80"
         environment:
           GIT_BRIDGE_ENABLED: "${GIT_BRIDGE_ENABLED}"
+          GIT_BRIDGE_HOST: "git-bridge"
+          GIT_BRIDGE_PORT: "8000"
           REDIS_HOST: "${REDIS_HOST}"
           SHARELATEX_MONGO_URL: "${MONGO_URL}"
           SHARELATEX_REDIS_HOST: "${REDIS_HOST}"
