Ensure git bridge is disabled by default
The config seed was mistakenly setting the GIT_BRIDGE_ENABLED variable
to true rather than false. We want git bridge to be enabled manually
because users also have to set a secret for it to work correctly.

--- a/lib/config-seed/overleaf.rc
+++ b/lib/config-seed/overleaf.rc
@@ -27,7 +27,7 @@ REDIS_DATA_PATH=data/redis
 #
 # If you enable git bridge, you must also set GIT_BRIDGE_OAUTH2_CLIENT_SECRET
 # in variables.env
-GIT_BRIDGE_ENABLED=true
+GIT_BRIDGE_ENABLED=false
 GIT_BRIDGE_DATA_PATH=data/git-bridge
 
 # TLS proxy configuration (optional)
