--- a/lib/config-seed/nginx.conf
+++ b/lib/config-seed/nginx.conf
@@ -35,6 +35,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_read_timeout 3m;
             proxy_send_timeout 3m;
