Start Mongo in a replica set by default
Starting with Overleaf version 4, Mongo needs to be in a replica set. By
default, the replica set is made of a single instance.

--- a/lib/docker-compose.mongo.yml
+++ b/lib/docker-compose.mongo.yml
@@ -5,6 +5,7 @@ services:
     mongo:
         restart: always
         image: "${MONGO_IMAGE}"
+        command: "${MONGO_ARGS}"
         container_name: mongo
         volumes:
             - "${MONGO_DATA_PATH}:/data/db"
