--- a/lib/config-seed/overleaf.rc
+++ b/lib/config-seed/overleaf.rc
@@ -22,6 +22,7 @@ MONGO_IMAGE=mongo:4.4
 # Redis configuration
 REDIS_ENABLED=true
 REDIS_DATA_PATH=data/redis
+REDIS_IMAGE=redis:6.2
 
 # Git-bridge configuration (Server Pro only)
 #
