--- a/lib/docker-compose.git-bridge.yml
+++ b/lib/docker-compose.git-bridge.yml
@@ -11,7 +11,7 @@ services:
         expose:
             - "8000"
         environment:
-            GIT_BRIDGE_API_BASE_URL: "http://sharelatex/api/v0"
+            GIT_BRIDGE_API_BASE_URL: "${GIT_BRIDGE_API_BASE_URL}"
             GIT_BRIDGE_OAUTH2_SERVER: "http://sharelatex"
             GIT_BRIDGE_POSTBACK_BASE_URL: "http://git-bridge:8000"
             GIT_BRIDGE_ROOT_DIR: "/data/git-bridge"
