Scripts to update config/overleaf.rc and config-seed rebrand (#217)
* Add scripts to rebrand variables.env and overleaf.rc

* Update bin/upgrade to prompt for config file rebrand

* Update bin/up to check for correct variable prefix

Ensures SHARELATEX_ is in place for version <= 4.x, and
OVERLEAF_ for version >= 5.x

* Rebrand variables for bin/docker-compose

Updates docker-compose.base.yml and sibling containers
base file with the changes in the script

* Update bin/doctor to support OVERLEAF_ prefix

* Update documentation with the OVERLEAF_ prefix

* Rebrand variables.env and overleaf.rc in config-seed

* Prepare config/version and CHANGELOG for release (WIP)

* Fix script documentation

Co-authored-by: Jakob Ackermann <jakob.ackermann@overleaf.com>

* Fix doctor logs

Co-authored-by: Jakob Ackermann <jakob.ackermann@overleaf.com>

* Remove unnecessary fallbacks to SHARELATEX_ vars

* SEt OVERLEAF_DATA_PATH to data/overleaf

* Remove duplicated environment entries

* Moved prefix brand checs from bin/up to bin/docker-compose

* Move set +o pipefail into subshell commands

* Use separate legacy compose files for required SHARELATEX_ vars

* Handle overleaf.rc rebranding before version upgrade

* Group output from rebranding process

* Move prompt for rebranding into helper function

* Refuse to start with mismatching ShareLaTeX vs Overleaf branded configs

* Print expected prefix when checking variables.env

* Print number of mismatching variables in overleaf.rc

* Check on variable rebranding from bin/doctor

* Cleanup bin/doctor lookup for ShareLaTeX branded overleaf.rc

* Update filesystem paths in bin/logs and docs

* Flag old TEXMFVAR entry in config/variables.env

REF: 1829e7ee2aa2c523a44cb1ea1f9639fcbd53caa1

* Update config-seed version to 5.0.1 and changelog

---------

Co-authored-by: Jakob Ackermann <jakob.ackermann@overleaf.com>

--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -1,4 +1,4 @@
-SHARELATEX_APP_NAME="Our Overleaf Instance"
+OVERLEAF_APP_NAME="Our Overleaf Instance"
 
 ENABLED_LINKED_FILE_TYPES=project_file,project_output_file
 
@@ -13,113 +13,113 @@ EMAIL_CONFIRMATION_DISABLED=true
 # NGINX_WORKER_CONNECTIONS=768
 
 ## Set for TLS via nginx-proxy
-# SHARELATEX_BEHIND_PROXY=true
-# SHARELATEX_SECURE_COOKIE=true
+# OVERLEAF_BEHIND_PROXY=true
+# OVERLEAF_SECURE_COOKIE=true
 
-# SHARELATEX_SITE_URL=http://overleaf.example.com
-# SHARELATEX_NAV_TITLE=Our Overleaf Instance
-# SHARELATEX_HEADER_IMAGE_URL=http://somewhere.com/mylogo.png
-# SHARELATEX_ADMIN_EMAIL=support@example.com
+# OVERLEAF_SITE_URL=http://overleaf.example.com
+# OVERLEAF_NAV_TITLE=Our Overleaf Instance
+# OVERLEAF_HEADER_IMAGE_URL=http://somewhere.com/mylogo.png
+# OVERLEAF_ADMIN_EMAIL=support@example.com
 
-# SHARELATEX_LEFT_FOOTER=[{"text":"Powered by Overleaf © 2021", "url": "https://www.overleaf.com"}, {"text": "Contact your support team", "url": "mailto:support@example.com"} ]
-# SHARELATEX_RIGHT_FOOTER=[{"text":"Hello I am on the Right"}]
+# OVERLEAF_LEFT_FOOTER=[{"text":"Powered by Overleaf © 2021", "url": "https://www.overleaf.com"}, {"text": "Contact your support team", "url": "mailto:support@example.com"} ]
+# OVERLEAF_RIGHT_FOOTER=[{"text":"Hello I am on the Right"}]
 
-# SHARELATEX_EMAIL_FROM_ADDRESS=team@example.com
+# OVERLEAF_EMAIL_FROM_ADDRESS=team@example.com
 
-# SHARELATEX_EMAIL_AWS_SES_ACCESS_KEY_ID=
-# SHARELATEX_EMAIL_AWS_SES_SECRET_KEY=
+# OVERLEAF_EMAIL_AWS_SES_ACCESS_KEY_ID=
+# OVERLEAF_EMAIL_AWS_SES_SECRET_KEY=
 
-# SHARELATEX_EMAIL_SMTP_HOST=smtp.example.com
-# SHARELATEX_EMAIL_SMTP_PORT=587
-# SHARELATEX_EMAIL_SMTP_SECURE=false
-# SHARELATEX_EMAIL_SMTP_USER=
-# SHARELATEX_EMAIL_SMTP_PASS=
-# SHARELATEX_EMAIL_SMTP_NAME=
-# SHARELATEX_EMAIL_SMTP_LOGGER=false
-# SHARELATEX_EMAIL_SMTP_TLS_REJECT_UNAUTH=true
-# SHARELATEX_EMAIL_SMTP_IGNORE_TLS=false
-# SHARELATEX_CUSTOM_EMAIL_FOOTER=This system is run by department x
+# OVERLEAF_EMAIL_SMTP_HOST=smtp.example.com
+# OVERLEAF_EMAIL_SMTP_PORT=587
+# OVERLEAF_EMAIL_SMTP_SECURE=false
+# OVERLEAF_EMAIL_SMTP_USER=
+# OVERLEAF_EMAIL_SMTP_PASS=
+# OVERLEAF_EMAIL_SMTP_NAME=
+# OVERLEAF_EMAIL_SMTP_LOGGER=false
+# OVERLEAF_EMAIL_SMTP_TLS_REJECT_UNAUTH=true
+# OVERLEAF_EMAIL_SMTP_IGNORE_TLS=false
+# OVERLEAF_CUSTOM_EMAIL_FOOTER=This system is run by department x
 
 ################
 ## Server Pro ##
 ################
 
 EXTERNAL_AUTH=none
-# SHARELATEX_LDAP_URL=ldap://ldap:389
-# SHARELATEX_LDAP_SEARCH_BASE=ou=people,dc=planetexpress,dc=com
-# SHARELATEX_LDAP_SEARCH_FILTER=(uid={{username}})
-# SHARELATEX_LDAP_BIND_DN=cn=admin,dc=planetexpress,dc=com
-# SHARELATEX_LDAP_BIND_CREDENTIALS=GoodNewsEveryone
-# SHARELATEX_LDAP_EMAIL_ATT=mail
-# SHARELATEX_LDAP_NAME_ATT=cn
-# SHARELATEX_LDAP_LAST_NAME_ATT=sn
-# SHARELATEX_LDAP_UPDATE_USER_DETAILS_ON_LOGIN=true
+# OVERLEAF_LDAP_URL=ldap://ldap:389
+# OVERLEAF_LDAP_SEARCH_BASE=ou=people,dc=planetexpress,dc=com
+# OVERLEAF_LDAP_SEARCH_FILTER=(uid={{username}})
+# OVERLEAF_LDAP_BIND_DN=cn=admin,dc=planetexpress,dc=com
+# OVERLEAF_LDAP_BIND_CREDENTIALS=GoodNewsEveryone
+# OVERLEAF_LDAP_EMAIL_ATT=mail
+# OVERLEAF_LDAP_NAME_ATT=cn
+# OVERLEAF_LDAP_LAST_NAME_ATT=sn
+# OVERLEAF_LDAP_UPDATE_USER_DETAILS_ON_LOGIN=true
 
-# SHARELATEX_TEMPLATES_USER_ID=578773160210479700917ee5
-# SHARELATEX_NEW_PROJECT_TEMPLATE_LINKS=[{"name":"All Templates","url":"/templates/all"}]
+# OVERLEAF_TEMPLATES_USER_ID=578773160210479700917ee5
+# OVERLEAF_NEW_PROJECT_TEMPLATE_LINKS=[{"name":"All Templates","url":"/templates/all"}]
 
 # TEX_LIVE_DOCKER_IMAGE=quay.io/sharelatex/texlive-full:2022.1
 # ALL_TEX_LIVE_DOCKER_IMAGES=quay.io/sharelatex/texlive-full:2022.1,quay.io/sharelatex/texlive-full:2021.1,quay.io/sharelatex/texlive-full:2020.1
 
-# SHARELATEX_PROXY_LEARN=true
+# OVERLEAF_PROXY_LEARN=true
 
 # S3
 # Docs: https://github.com/overleaf/overleaf/wiki/S3
 # ## Enable the s3 backend for filestore
-# SHARELATEX_FILESTORE_BACKEND=s3
+# OVERLEAF_FILESTORE_BACKEND=s3
 # ## Enable S3 backend for history
-# SHARELATEX_HISTORY_BACKEND=s3
+# OVERLEAF_HISTORY_BACKEND=s3
 # #
 # # Pick one of the two sections "AWS S3" or "Self-hosted S3".
 # #
 # # AWS S3
 # ## Bucket name for project files
-# SHARELATEX_FILESTORE_USER_FILES_BUCKET_NAME=overleaf-user-files
+# OVERLEAF_FILESTORE_USER_FILES_BUCKET_NAME=overleaf-user-files
 # ## Bucket name for template files
-# SHARELATEX_FILESTORE_TEMPLATE_FILES_BUCKET_NAME=overleaf-template-files
+# OVERLEAF_FILESTORE_TEMPLATE_FILES_BUCKET_NAME=overleaf-template-files
 # ## Key for filestore user
-# SHARELATEX_FILESTORE_S3_ACCESS_KEY_ID=...
+# OVERLEAF_FILESTORE_S3_ACCESS_KEY_ID=...
 # ## Secret for filestore user
-# SHARELATEX_FILESTORE_S3_SECRET_ACCESS_KEY=...
+# OVERLEAF_FILESTORE_S3_SECRET_ACCESS_KEY=...
 # ## Bucket region you picked when creating the buckets.
-# SHARELATEX_FILESTORE_S3_REGION=""
+# OVERLEAF_FILESTORE_S3_REGION=""
 # ## Bucket name for project history blobs
-# SHARELATEX_HISTORY_PROJECT_BLOBS_BUCKET=overleaf-project-blobs
+# OVERLEAF_HISTORY_PROJECT_BLOBS_BUCKET=overleaf-project-blobs
 # ## Bucket name for history chunks
-# SHARELATEX_HISTORY_CHUNKS_BUCKET=overleaf-chunks
+# OVERLEAF_HISTORY_CHUNKS_BUCKET=overleaf-chunks
 # ## Key for history user
-# SHARELATEX_HISTORY_S3_ACCESS_KEY_ID=...
+# OVERLEAF_HISTORY_S3_ACCESS_KEY_ID=...
 # ## Secret for history user
-# SHARELATEX_HISTORY_S3_SECRET_ACCESS_KEY=...
+# OVERLEAF_HISTORY_S3_SECRET_ACCESS_KEY=...
 # ## Bucket region you picked when creating the buckets.
-# SHARELATEX_HISTORY_S3_REGION=""
+# OVERLEAF_HISTORY_S3_REGION=""
 #
 # # Self-hosted S3
 # ## Bucket name for project files
-# SHARELATEX_FILESTORE_USER_FILES_BUCKET_NAME=overleaf-user-files
+# OVERLEAF_FILESTORE_USER_FILES_BUCKET_NAME=overleaf-user-files
 # ## Bucket name for template files
-# SHARELATEX_FILESTORE_TEMPLATE_FILES_BUCKET_NAME=overleaf-template-files
+# OVERLEAF_FILESTORE_TEMPLATE_FILES_BUCKET_NAME=overleaf-template-files
 # ## Key for filestore user
-# SHARELATEX_FILESTORE_S3_ACCESS_KEY_ID=...
+# OVERLEAF_FILESTORE_S3_ACCESS_KEY_ID=...
 # ## Secret for filestore user
-# SHARELATEX_FILESTORE_S3_SECRET_ACCESS_KEY=...
+# OVERLEAF_FILESTORE_S3_SECRET_ACCESS_KEY=...
 # ## S3 provider endpoint
-# SHARELATEX_FILESTORE_S3_ENDPOINT=http://10.10.10.10:9000
+# OVERLEAF_FILESTORE_S3_ENDPOINT=http://10.10.10.10:9000
 # ## Path style addressing of buckets. Most likely you need to set this to "true".
-# SHARELATEX_FILESTORE_S3_PATH_STYLE="true"
+# OVERLEAF_FILESTORE_S3_PATH_STYLE="true"
 # ## Bucket region. Most likely you do not need to configure this.
-# SHARELATEX_FILESTORE_S3_REGION=""
+# OVERLEAF_FILESTORE_S3_REGION=""
 # ## Bucket name for project history blobs
-# SHARELATEX_HISTORY_PROJECT_BLOBS_BUCKET=overleaf-project-blobs
+# OVERLEAF_HISTORY_PROJECT_BLOBS_BUCKET=overleaf-project-blobs
 # ## Bucket name for history chunks
-# SHARELATEX_HISTORY_CHUNKS_BUCKET=overleaf-chunks
+# OVERLEAF_HISTORY_CHUNKS_BUCKET=overleaf-chunks
 # ## Key for history user
-# SHARELATEX_HISTORY_S3_ACCESS_KEY_ID=...
+# OVERLEAF_HISTORY_S3_ACCESS_KEY_ID=...
 # ## Secret for history user
-# SHARELATEX_HISTORY_S3_SECRET_ACCESS_KEY=...
+# OVERLEAF_HISTORY_S3_SECRET_ACCESS_KEY=...
 # ## S3 provider endpoint
-# SHARELATEX_HISTORY_S3_ENDPOINT=http://10.10.10.10:9000
+# OVERLEAF_HISTORY_S3_ENDPOINT=http://10.10.10.10:9000
 # ## Path style addressing of buckets. Most likely you need to set this to "true".
-# SHARELATEX_HISTORY_S3_PATH_STYLE="true"
+# OVERLEAF_HISTORY_S3_PATH_STYLE="true"
 # ## Bucket region. Most likely you do not need to configure this.
-# SHARELATEX_HISTORY_S3_REGION=""
+# OVERLEAF_HISTORY_S3_REGION=""
