Remove "Powered by Overleaf" entry from default left footer
The item is part of the pug template now.
Also add single quotes to help "source" with loading the entries.

--- a/lib/config-seed/variables.env
+++ b/lib/config-seed/variables.env
@@ -21,8 +21,8 @@ EMAIL_CONFIRMATION_DISABLED=true
 # OVERLEAF_HEADER_IMAGE_URL=http://somewhere.com/mylogo.png
 # OVERLEAF_ADMIN_EMAIL=support@example.com
 
-# OVERLEAF_LEFT_FOOTER=[{"text":"Powered by Overleaf © 2021", "url": "https://www.overleaf.com"}, {"text": "Contact your support team", "url": "mailto:support@example.com"} ]
-# OVERLEAF_RIGHT_FOOTER=[{"text":"Hello I am on the Right"}]
+# OVERLEAF_LEFT_FOOTER='[{"text": "Contact your support team", "url": "mailto:support@example.com"}]'
+# OVERLEAF_RIGHT_FOOTER='[{"text": "Hello, I am on the Right"}]'
 
 # OVERLEAF_EMAIL_FROM_ADDRESS=team@example.com
 
