--- a/lib/docker-compose.mongo.yml
+++ b/lib/docker-compose.mongo.yml
@@ -4,7 +4,7 @@ services:
 
     mongo:
         restart: always
-        image: "${MONGO_IMAGE}"
+        image: "${MONGO_DOCKER_IMAGE}"
         command: "${MONGO_ARGS}"
         container_name: mongo
         volumes:
@@ -12,7 +12,7 @@ services:
         expose:
             - 27017
         healthcheck:
-            test: echo 'db.stats().ok' | mongo localhost:27017/test --quiet
+            test: echo 'db.stats().ok' | ${MONGOSH} localhost:27017/test --quiet
             interval: 10s
             timeout: 10s
             retries: 5
