Fix of realpath: no such file or directory (#306)
* feat: whitelist empty directories in gitignore

* feat: add empty directories for init

* fix: whitelist only .gitkeep files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ config/**/*
 
 data/**/*
 !data/.gitkeep
+
+!data/git-bridge/.gitkeep
+!data/mongo/.gitkeep
+!data/overleaf/.gitkeep
+!data/redis/.gitkeep
