Fix graceful shutdown when TLS proxy is configured (#388)
* Upgrade nginx to 1.28

* Fix graceful shutdown when TLS proxy is configured

* Automatically configure environment variables for TLS proxy

* Update documentation

--- a/lib/config-seed/nginx.conf
+++ b/lib/config-seed/nginx.conf
@@ -1,6 +1,13 @@
 events {}
 
 http {
+    # 127.0.0.11 is the DNS server running in Docker. It can resolve the docker compose service name "sharelatex" to a container IP.
+    # https://github.com/docker/docs/issues/20532
+    resolver 127.0.0.11 ipv6=off valid=10s;
+    upstream sharelatex {
+      zone dns 64k;
+      server sharelatex:80 resolve;
+    }
 
     server {
         listen 80 default_server;
@@ -22,7 +29,7 @@ http {
         ssl_prefer_server_ciphers off;
 
         # config to enable HSTS(HTTP Strict Transport Security) https://developer.mozilla.org/en-US/docs/Security/HTTP_Strict_Transport_Security
-        # to avoid ssl stripping https://en.wikipedia.org/wiki/SSL_stripping#SSL_stripping	
+        # to avoid ssl stripping https://en.wikipedia.org/wiki/SSL_stripping#SSL_stripping
         add_header Strict-Transport-Security "max-age=31536000; includeSubdomains;";
 
         server_tokens off;
@@ -30,7 +37,7 @@ http {
         client_max_body_size 50M;
 
         location / {
-            proxy_pass http://sharelatex:80;
+            proxy_pass http://sharelatex;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
