docs: update example SMTP email configuration with generic placeholders

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,8 @@ OVERLEAF_ADMIN_EMAIL=admin@example.com
 OVERLEAF_BEHIND_PROXY=false
 
 # Email Configuration (SMTP)
-# OVERLEAF_EMAIL_FROM_ADDRESS=noreply@overleaf.cei.ita.br
-# OVERLEAF_EMAIL_SMTP_HOST=smtp.ita.br
+# OVERLEAF_EMAIL_FROM_ADDRESS=noreply@example.com
+# OVERLEAF_EMAIL_SMTP_HOST=smtp.example.com
 # OVERLEAF_EMAIL_SMTP_PORT=465
 # OVERLEAF_EMAIL_SMTP_SECURE=true
 # OVERLEAF_EMAIL_SMTP_USER=your-email@gmail.com
