--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,15 +30,15 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: 6379
       
-      # Email Configuration (SMTP)
-      OVERLEAF_EMAIL_FROM_ADDRESS: ${OVERLEAF_EMAIL_FROM_ADDRESS:-}
-      OVERLEAF_EMAIL_SMTP_HOST: ${OVERLEAF_EMAIL_SMTP_HOST:-}
-      OVERLEAF_EMAIL_SMTP_PORT: ${OVERLEAF_EMAIL_SMTP_PORT:-587}
-      OVERLEAF_EMAIL_SMTP_SECURE: ${OVERLEAF_EMAIL_SMTP_SECURE:-false}
-      OVERLEAF_EMAIL_SMTP_USER: ${OVERLEAF_EMAIL_SMTP_USER:-}
-      OVERLEAF_EMAIL_SMTP_PASS: ${OVERLEAF_EMAIL_SMTP_PASS:-}
-      OVERLEAF_EMAIL_SMTP_LOGGER: ${OVERLEAF_EMAIL_SMTP_LOGGER:-false}
-      OVERLEAF_EMAIL_SMTP_NAME: ${OVERLEAF_EMAIL_SMTP_NAME:-}
+      # Email Configuration (SMTP) - Leave empty to disable email features
+      OVERLEAF_EMAIL_FROM_ADDRESS: ${OVERLEAF_EMAIL_FROM_ADDRESS}
+      OVERLEAF_EMAIL_SMTP_HOST: ${OVERLEAF_EMAIL_SMTP_HOST}
+      OVERLEAF_EMAIL_SMTP_PORT: ${OVERLEAF_EMAIL_SMTP_PORT}
+      OVERLEAF_EMAIL_SMTP_SECURE: ${OVERLEAF_EMAIL_SMTP_SECURE}
+      OVERLEAF_EMAIL_SMTP_USER: ${OVERLEAF_EMAIL_SMTP_USER}
+      OVERLEAF_EMAIL_SMTP_PASS: ${OVERLEAF_EMAIL_SMTP_PASS}
+      OVERLEAF_EMAIL_SMTP_LOGGER: ${OVERLEAF_EMAIL_SMTP_LOGGER}
+      OVERLEAF_EMAIL_SMTP_NAME: ${OVERLEAF_EMAIL_SMTP_NAME}
       EMAIL_CONFIRMATION_DISABLED: ${EMAIL_CONFIRMATION_DISABLED:-true}
       
       # Features
