fix: add TLS certificate bypass options for SMTP port 465 SSL connections

--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,11 @@ OVERLEAF_BEHIND_PROXY=false
 # Email Configuration (SMTP)
 # OVERLEAF_EMAIL_FROM_ADDRESS=noreply@example.com
 # OVERLEAF_EMAIL_SMTP_HOST=smtp.example.com
-# OVERLEAF_EMAIL_SMTP_PORT=465
-# OVERLEAF_EMAIL_SMTP_SECURE=true
+# OVERLEAF_EMAIL_SMTP_PORT=587
+# OVERLEAF_EMAIL_SMTP_SECURE=false
 # OVERLEAF_EMAIL_SMTP_USER=your-email@gmail.com
 # OVERLEAF_EMAIL_SMTP_PASS=your-app-password
+# Optional: EMAIL_CONFIRMATION_DISABLED=true
 
 # File Upload Size Limits
 # OVERLEAF_FILESTORE_MAX_FILE_SIZE_MB=50
