--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       OVERLEAF_EMAIL_SMTP_SECURE: ${OVERLEAF_EMAIL_SMTP_SECURE}
       OVERLEAF_EMAIL_SMTP_USER: ${OVERLEAF_EMAIL_SMTP_USER}
       OVERLEAF_EMAIL_SMTP_PASS: ${OVERLEAF_EMAIL_SMTP_PASS}
+      OVERLEAF_EMAIL_SMTP_TLS_REJECT_UNAUTH: ${OVERLEAF_EMAIL_SMTP_TLS_REJECT_UNAUTH:-false}
+      OVERLEAF_EMAIL_SMTP_IGNORE_TLS: ${OVERLEAF_EMAIL_SMTP_IGNORE_TLS:-false}
       OVERLEAF_EMAIL_SMTP_LOGGER: ${OVERLEAF_EMAIL_SMTP_LOGGER}
       OVERLEAF_EMAIL_SMTP_NAME: ${OVERLEAF_EMAIL_SMTP_NAME}
       EMAIL_CONFIRMATION_DISABLED: ${EMAIL_CONFIRMATION_DISABLED:-true}
