feat: add support for custom templates (NASA LaTeX templates)

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,10 @@ OVERLEAF_BEHIND_PROXY=false
 # Enable/Disable Features
 # OVERLEAF_ALLOW_PUBLIC_ACCESS=true
 # OVERLEAF_ALLOW_ANONYMOUS_READ_AND_WRITE_SHARING=true
+
+# Custom Templates
+# Create a dedicated templates user and get their user ID from the database
+# All projects created by this user will appear as templates
+# OVERLEAF_TEMPLATES_USER_ID=
+# Add custom template links (JSON format)
+# OVERLEAF_NEW_PROJECT_TEMPLATE_LINKS=[{"name":"NASA Templates","url":"https://github.com/nasa/nasa-latex-docs"}]
