--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,10 @@ services:
       # Features
       ENABLED_LINKED_FILE_TYPES: 'project_file,project_output_file'
       ENABLE_CONVERSIONS: 'true'
+      
+      # Custom Templates
+      OVERLEAF_NEW_PROJECT_TEMPLATE_LINKS: ${OVERLEAF_NEW_PROJECT_TEMPLATE_LINKS}
+      OVERLEAF_TEMPLATES_USER_ID: ${OVERLEAF_TEMPLATES_USER_ID}
     stop_grace_period: 60s
 
   mongo:
