--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,9 @@ services:
       # Custom Templates
       OVERLEAF_NEW_PROJECT_TEMPLATE_LINKS: ${OVERLEAF_NEW_PROJECT_TEMPLATE_LINKS}
       OVERLEAF_TEMPLATES_USER_ID: ${OVERLEAF_TEMPLATES_USER_ID}
+      
+      # TeX Live - Use full TeX Live installation
+      TEX_LIVE_DOCKER_IMAGE: ${TEX_LIVE_DOCKER_IMAGE:-quay.io/sharelatex/texlive-full:2023.1}
     stop_grace_period: 60s
 
   mongo:
